<resources>
    <string name="app_name">計算特訓</string>
    <string name="tv_tap_game_start">問題数を選択してSTARTしましょう！</string>

<!--   ボタン-->
    <string name="btn_game_start">START</string>
    <string name="nokori_question_text">残り問題数</string>
    <string name="correct">正解数</string>
    <string name="crrect_point">正答率</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="ans_correct">答え合わせ</string>
    <string name="back">戻る</string>
    <string name="is_correct">正解</string>
    <string name="is_not_correct">不正解</string>
    <string name="game_finished">ゲーム終了</string>

<!--    選択肢-->
    <string-array name="num_of_question">
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

<!--    IntentKey-->
</resources>